поправил картинку с лесом

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>макет</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="css/style.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
@@ -102,22 +103,21 @@
         <p class="desc-nameFf">James Falulkner</p>
         <p class="desc-photoFF">Lifestyle</p>
 
-        <!--фон из гор + инпут с шрифтом-->
-        <div class="emailInForest">
-        <p>Subscibe our newsletter</p>
-        <span>Leverage agile framework to provide a robust synopsis for high level overviews</span>
-        <img src="css/img/forest-and-rock.jpg" class="forest">
-        <input type="email" placeholder="Your Email..." class="item-inp">
-        <a href="#">
-            <img src="css/img/Envelope.jpg" class="Envelope">
-        </a>
-        <div class="line-und-bg"></div>
-    </div>
 
 
 
         </container>
-
+        <!--фон из гор + инпут с шрифтом-->
+        <div class="emailInForest">
+            <p>Subscibe our newsletter</p>
+            <span>Leverage agile framework to provide a robust synopsis for high level overviews</span>
+            <div class="forest"></div>
+            <input type="email" placeholder="Your Email..." class="item-inp">
+            <a href="#">
+                <img src="css/img/Envelope.jpg" class="Envelope">
+            </a>
+            <div class="line-und-bg"></div>
+        </div>  
 
     <container class="third-gallery">
         <img src="css/img/первая.jpg" class="first-gall-item">
